; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-memcache.c_dm_mem_cache_client_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-memcache.c_dm_mem_cache_client_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_mem_cache_client = type { i64, i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dm_mem_cache_client_destroy(%struct.dm_mem_cache_client* %0) #0 {
  %2 = alloca %struct.dm_mem_cache_client*, align 8
  store %struct.dm_mem_cache_client* %0, %struct.dm_mem_cache_client** %2, align 8
  %3 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %2, align 8
  %4 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %2, align 8
  %7 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %5, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUG_ON(i32 %10)
  %12 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %2, align 8
  %13 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @free_cache_pages(i32 %14)
  %16 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %2, align 8
  %17 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @mempool_destroy(i32 %18)
  %20 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %2, align 8
  %21 = call i32 @kfree(%struct.dm_mem_cache_client* %20)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @free_cache_pages(i32) #1

declare dso_local i32 @mempool_destroy(i32) #1

declare dso_local i32 @kfree(%struct.dm_mem_cache_client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
